--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
    <section class="green-bg min-vh-class position-relative pt-5" id="Roadmap">
     <div class="container-main">
     <div class="col-lg-6 ">
-      <h1 class="ff-cheryy-bobone fs-60 fw-400 color-white rdmap-head text-center text-lg-start pt-lg-5 pt-4">Roadmap</h1>
+      <h1 class="ff-cheryy-bobone fs-60 fw-400 color-white rdmap-head text-center text-lg-start pt-lg-5 pt-3">Roadmap</h1>
       <p class="ff-Balsamiq fs-18 fw-400 color-white mb-lg-5 pt-lg-3 text-center text-lg-start">Nam duis feugiat tellus metus arcu pharetra arcu. Sed ultrices ullamcorper urna interdum. Maecenas neque augue mattis.</p>
     </div>
 
@@ -304,13 +304,13 @@
     <img src="./assets/images/fttr-teddy2.png" alt="" class="fttr-teddy2">
     <img src="./assets/images/ftrr-bg-blur.png" alt="#" class="fttr-blur">
     <div class="container-main pt-lg-5">
-     <div class="mt-lg-5 pt-lg-5 pt-4"> <h1 class="ff-cheryy-bobone fs-60 fw-400 color-white fttr-head text-center mb-lg-5 mb-3 text-center">FAQ’s</h1></div>
+     <div class="mt-lg-5 pt-lg-5 pt-5"> <h1 class="ff-cheryy-bobone fs-60 fw-400 color-white fttr-head text-center mb-lg-5 mb-3 pt-3 text-center">FAQ’s</h1></div>
 
      <div class="w-100 d-flex justify-content-center">
       <div class="accordion" id="accordionExample">
-        <div class="accordion-item">
+        <div class="accordion-item radius-accrdn">
           <h2 class="accordion-header">
-            <button class="accordion-button collapsed ff-Balsamiq fw-700 txt-sadw" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+            <button class="accordion-button collapsed ff-Balsamiq fw-700 txt-sadw radius-accrdn" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
               Q1. What is Cozy Capys?
             </button>
           </h2>
@@ -320,9 +320,9 @@
             </div>
           </div>
         </div>
-        <div class="accordion-item mt-3">
+        <div class="accordion-item mt-3 radius-accrdn">
           <h2 class="accordion-header">
-            <button class="accordion-button collapsed ff-Balsamiq fw-700 txt-sadw" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseThree">
+            <button class="accordion-button collapsed ff-Balsamiq fw-700 txt-sadw radius-accrdn" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseThree">
               Q2. How does Cozy Capys give back to wildlife conservation?
             </button>
           </h2>
@@ -332,9 +332,9 @@
             </div>
           </div>
         </div>
-        <div class="accordion-item mt-3">
+        <div class="accordion-item mt-3 radius-accrdn">
           <h2 class="accordion-header">
-            <button class="accordion-button collapsed ff-Balsamiq fw-700 txt-sadw" type="button" data-bs-toggle="collapse" data-bs-target="#collapsefour" aria-expanded="false" aria-controls="collapseThree">
+            <button class="accordion-button collapsed ff-Balsamiq fw-700 txt-sadw radius-accrdn" type="button" data-bs-toggle="collapse" data-bs-target="#collapsefour" aria-expanded="false" aria-controls="collapseThree">
               Q3. What kind of community events does Cozy Capys host?
             </button>
           </h2>
@@ -344,9 +344,9 @@
             </div>
           </div>
         </div>
-        <div class="accordion-item mt-3">
+        <div class="accordion-item mt-3 radius-accrdn">
           <h2 class="accordion-header">
-            <button class="accordion-button collapsed ff-Balsamiq fw-700 txt-sadw" type="button" data-bs-toggle="collapse" data-bs-target="#collapsefive" aria-expanded="false" aria-controls="collapseThree">
+            <button class="accordion-button collapsed ff-Balsamiq fw-700 txt-sadw radius-accrdn" type="button" data-bs-toggle="collapse" data-bs-target="#collapsefive" aria-expanded="false" aria-controls="collapseThree">
               Q4. How can I stay updated on Cozy Capys news and announcements?
             </button>
           </h2>
@@ -356,9 +356,9 @@
             </div>
           </div>
         </div>
-        <div class="accordion-item mt-3">
+        <div class="accordion-item mt-3 radius-accrdn">
           <h2 class="accordion-header">
-            <button class="accordion-button collapsed ff-Balsamiq fw-700 txt-sadw" type="button" data-bs-toggle="collapse" data-bs-target="#collapsesix" aria-expanded="false" aria-controls="collapseThree">
+            <button class="accordion-button collapsed ff-Balsamiq fw-700 txt-sadw radius-accrdn" type="button" data-bs-toggle="collapse" data-bs-target="#collapsesix" aria-expanded="false" aria-controls="collapseThree">
               Q5. How can I adopt my Cozy Capy?
             </button>
           </h2>
@@ -368,9 +368,9 @@
             </div>
           </div>
         </div> 
-        <div class="accordion-item mt-3">
+        <div class="accordion-item mt-3 radius-accrdn">
           <h2 class="accordion-header">
-            <button class="accordion-button collapsed ff-Balsamiq fw-700 txt-sadw" type="button" data-bs-toggle="collapse" data-bs-target="#collapseseven" aria-expanded="false" aria-controls="collapseThree">
+            <button class="accordion-button collapsed ff-Balsamiq fw-700 txt-sadw radius-accrdn" type="button" data-bs-toggle="collapse" data-bs-target="#collapseseven" aria-expanded="false" aria-controls="collapseThree">
               Q6. What utility does owning a Cozy Capy provide?
             </button>
           </h2>
@@ -387,11 +387,11 @@
      <div class="mt-5 pt-xl-5 text-center">
       <img src="./assets/images/fttr-logo.png" alt="#" class="fttr-logo">
       <ul class="d-flex flex-wrap justify-content-center gap-4 pt-lg-5 pt-3">
-        <li><a href="" class="ff-Balsamiq fs-16 fw-400 color-black">Home</a></li>
-        <li><a href="" class="ff-Balsamiq fs-16 fw-400 color-black">About</a></li>
-        <li><a href="" class="ff-Balsamiq fs-16 fw-400 color-black">Impact</a></li>
-        <li><a href="" class="ff-Balsamiq fs-16 fw-400 color-black">Roadmap</a></li>
-        <li><a href="" class="ff-Balsamiq fs-16 fw-400 color-black">FAQ</a></li>
+        <li><a href="" class="ff-Balsamiq fs-16 fw-400 color-black fttr-">Home</a></li>
+        <li><a href="" class="ff-Balsamiq fs-16 fw-400 color-black fttr-">About</a></li>
+        <li><a href="" class="ff-Balsamiq fs-16 fw-400 color-black fttr-">Impact</a></li>
+        <li><a href="" class="ff-Balsamiq fs-16 fw-400 color-black fttr-">Roadmap</a></li>
+        <li><a href="" class="ff-Balsamiq fs-16 fw-400 color-black fttr-">FAQ</a></li>
       </ul>
       <div class="d-flex gap-4 justify-content-center pt-4 pb-5">
         <a href="" class="z-1 fttr-links">
