--- a/index.html
+++ b/index.html
@@ -127,17 +127,23 @@
         <div class="d-flex flex-column justify-content-center text-center cloud-box cloud-box2">
           <p class="ff-cheryy-bobone fs-60 fw-400 color-pink z-2">About Us</p>
             <div class="d-flex justify-content-center">
-              <p class="ff-Balsamiq fs-18 fw-400 cloud-para  z-2">Cozy Capys is an impactful NFT
-                project featuring 10,000
-                adorable capybara characters! Capybaras are sweet, caring, and gentle creatures that can form
+              <p class="ff-Balsamiq fs-18 fw-400 cloud-para  z-2"><span class="d-lg-block">Cozy Capys is an impactful NFT
+                project featuring 10,000</span>
+               <span class="d-lg-block"> adorable capybara characters! Capybaras are sweet, caring, and gentle creatures that</span> <span class="d-lg-block">can form
                 strong bonds with anyone
-                around them. By donating 10% of all proceeds to organizations that support wildlife
+                around them. By donating 10% of all proceeds to</span><span class="d-lg-block">
+                  organizations that support wildlife
                 conservation, hosting inclusive
-                community events, and offering real-life animal experiences, Cozy Capys aims to incorporate all
-                the amazing qualities
-                that these animals portray each and every day! Adopt your Cozy Capy today and join our wonderful
+                community events,
+                </span> <span class="d-lg-block">
+                  and offering real-life animal experiences, Cozy Capys aims to incorporate all
+                the 
+                </span><span class="d-lg-block">amazing qualities
+                  that these animals portray each and every day! Adopt your Cozy Capy </span><span class="d-lg-block">
+                    today and join our wonderful
                 community in giving
                 back
+                  </span>
                 to the beautiful world around us.</p>
             </div>
         </div>
