--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
     </div>
 
   <div class="row pb-5">
-    <div class="col-md-7 ">
+    <div class="col-md-6 col-xl-7 ">
         <div class="card-box d-flex  justify-content-between">
           <div class="d-flex flex-column justify-content-between">
             <h1 class="ff-Balsamiq fs-28 fw-700 color-white">Phase</h1>
@@ -209,7 +209,7 @@
 
         </div>
     </div>
-    <div class="col-md-5 mt-4 mt-lg-0  ">
+    <div class="col-md-6 col-xl-5 mt-4 mt-lg-0  ">
       <div class="card-box d-flex  justify-content-between">
         <div class="d-flex flex-column justify-content-between">
           <h1 class="ff-Balsamiq fs-28 fw-700 color-white">Phase</h1>
@@ -220,7 +220,7 @@
               </svg>
               
           </span>
-         <p class="ff-Balsamiq fs-18 fw-400 color-white mt-4 m-unset card-para">Community Engagement & Growth <span><svg width="20" height="12" viewBox="0 0 20 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+         <p class="ff-Balsamiq fs-18 fw-400 color-white mt-4 m-unset card-para d-block">Community Engagement & Growth <span><svg width="20" height="12" viewBox="0 0 20 12" fill="none" xmlns="http://www.w3.org/2000/svg">
           <path d="M1 5.25C0.585786 5.25 0.25 5.58579 0.25 6C0.25 6.41421 0.585786 6.75 1 6.75L1 5.25ZM19.5303 6.53033C19.8232 6.23744 19.8232 5.76256 19.5303 5.46967L14.7574 0.696698C14.4645 0.403805 13.9896 0.403805 13.6967 0.696698C13.4038 0.989591 13.4038 1.46447 13.6967 1.75736L17.9393 6L13.6967 10.2426C13.4038 10.5355 13.4038 11.0104 13.6967 11.3033C13.9896 11.5962 14.4645 11.5962 14.7574 11.3033L19.5303 6.53033ZM1 6.75L19 6.75L19 5.25L1 5.25L1 6.75Z" fill="white"/>
           </svg>
           </span></p>
@@ -236,7 +236,7 @@
 
       </div>
   </div>
-  <div class="col-md-5 mt-4 ">
+  <div class="col-md-6 col-xl-5 mt-4 ">
     <div class="card-box d-flex  justify-content-between">
       <div class="d-flex flex-column justify-content-between">
         <h1 class="ff-Balsamiq fs-28 fw-700 color-white">Phase</h1>
@@ -264,7 +264,7 @@
 
     </div>
 </div>
-<div class="col-md-7 mt-4 ">
+<div class="col-md-6 col-xl-7 mt-4 ">
   <div class="card-box d-flex  justify-content-between">
     <div class="d-flex flex-column justify-content-between">
       <h1 class="ff-Balsamiq fs-28 fw-700 color-white">Phase</h1>
